# rithmic_zorro_plugin

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md
resources/: resource.h  resource.rc  version.rc.in
src/: RithmicZorroPlugin.cpp  RithmicZorroPlugin.h  client.cpp  client.h  client_clert.cpp  client_histories.cpp  client_md.cpp  client_order.cpp  client_pnl.cpp  client_trade.cpp  config.h  dllmain.cpp  global.h  order.h  pnl.h  rithmic_copyright_dialog.cpp  rithmic_copyright_dialog.h  rithmic_login_dialog.cpp  rithmic_login_dialog.h  rithmic_logos_dialog.cpp  rithmic_logos_dialog.h  rithmic_system_config.cpp  rithmic_system_config.h  rithmic_zorro_plugin.cpp  rithmic_zorro_plugin.h  stdafx.cpp  stdafx.h  symbol.h  targetver.h  utils.h  version.h.in
tools/: config_generator.py
